# WASMRS2USharp

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.kiro/specs/multi-udonbehaviour-support/: design.md  requirements.md  tasks.md
.kiro/specs/rust-to-udonsharp-integration/: design.md  requirements.md  tasks.md
.kiro/specs/standard-multi-behavior-pattern/: design.md  requirements.md  tasks.md
crates/cargo-udonsharp/: Cargo.toml
crates/cargo-udonsharp/src/: main.rs
crates/udonsharp-bindings/: Cargo.toml
crates/udonsharp-bindings/src/: analyzer.rs  asmdef.rs  compatibility.rs  csharp.rs  generator.rs  lib.rs  unity.rs  vrchat.rs
crates/udonsharp-build/: Cargo.toml
crates/udonsharp-build/src/: lib.rs
crates/udonsharp-build/templates/advanced/: Cargo.toml.template  build.rs  lib.rs  networking.rs  ui.rs
crates/udonsharp-build/templates/advanced/workspace/: Cargo.toml
crates/udonsharp-build/templates/audio/: .gitignore
crates/udonsharp-build/templates/basic/: .gitignore  Cargo.toml  build.rs  lib.rs
crates/udonsharp-build/templates/game-logic/: lib.rs
crates/udonsharp-build/templates/networking/: Cargo.toml  build.rs  lib.rs
crates/udonsharp-build/templates/ui/: lib.rs
crates/udonsharp-build/templates/workspace/: Cargo.toml.template
crates/udonsharp-cli/: Cargo.toml
crates/udonsharp-cli/src/: analyze_command.rs  main.rs
crates/udonsharp-compiler/: Cargo.toml
crates/udonsharp-compiler/src/: behavior_dependency_analyzer.rs  code_generator.rs  code_generator_test.rs  compilation_reporter.rs  comprehensive_error_system.rs  config.rs  debug_info_generator.rs  dependency_analyzer_tool.rs  error_detection.rs  error_reporting.rs  initialization_coordinator.rs  inter_behavior_communication.rs  lib.rs  multi_behavior.rs  multi_behavior_tests.rs  optimizer.rs  performance_validation_tests.rs  pipeline.rs  pipeline_tests.rs  prefab_generator.rs  runtime_validation.rs  shared_runtime.rs  standard_multi_behavior_integration.rs  struct_analyzer.rs  tests.rs  trait_validator.rs  wasm_compiler.rs
crates/udonsharp-core/: Cargo.toml
crates/udonsharp-core/src/: attributes.rs  diagnostics.rs  error.rs  integration_tests.rs  lib.rs  macros.rs  multi_behavior_errors.rs  prelude.rs  test_runner.rs  testing.rs  traits.rs  types.rs
crates/udonsharp-macros/: Cargo.toml
crates/udonsharp-macros/src/: lib.rs
crates/udonsharp-macros/tests/: integration_tests.rs
crates/udonsharp-performance/: Cargo.toml
crates/udonsharp-performance/src/: analysis.rs  lib.rs  metrics.rs  monitor.rs  multi_behavior_metrics.rs  optimizer.rs  profiler.rs  reporter.rs  world_analyzer.rs
crates/udonsharp-performance/templates/: report.css
crates/udonsharp-performance/tests/: integration_tests.rs
crates/wasm2usharp-enhanced/: Cargo.toml
crates/wasm2usharp-enhanced/examples/: basic_usage.rs
crates/wasm2usharp-enhanced/src/: analyzer.rs  dependency_analyzer.rs  file_generator.rs  lib.rs  splitter.rs  tests.rs  transformer.rs
crates/wasm2usharp-enhanced/tests/: multi_behavior_integration_tests.rs
docs/: api-reference.md  best-practices.md  compilation-pipeline.md  getting-started.md  standard-multi-behavior-pattern.md
examples/: README.md
examples/game-manager/: Cargo.toml  README.md
examples/game-manager/src/: lib.rs
examples/hello-world/: Cargo.toml  README.md  build.rs  udonsharp.toml
examples/hello-world/src/: lib.rs
examples/multi-behavior-demo/: Cargo.toml  README.md  build.rs  udonsharp.toml
examples/multi-behavior-demo/src/: lib.rs
examples/player-counter/: Cargo.toml  README.md  build.rs  udonsharp.toml
examples/player-counter/src/: lib.rs  player_data.rs  ui_manager.rs
examples/simple-multi-behavior/: Cargo.toml  README.md  build.rs  demo  demo.rs  udonsharp.toml
examples/simple-multi-behavior/src/: lib.rs  test.rs
examples/standard-multi-behavior/: Cargo.toml  README.md  build.rs  udonsharp.toml
examples/standard-multi-behavior/src/: lib.rs
examples/tutorials/: README.md
examples/tutorials/01-basics/: README.md
examples/tutorials/02-multi-behavior/: Cargo.toml  README.md  build.rs  udonsharp.toml
examples/tutorials/02-multi-behavior/src/: lib.rs
scripts/: build.sh  publish-crates.ps1
templates/udonsharp-project/: Cargo.toml  build.rs
templates/udonsharp-project/src/: lib.rs
