[package]
name = "cargo-udonsharp"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand for UdonSharp compilation"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-udonsharp"
path = "src/main.rs"

[dependencies]
udonsharp-core = { path = "../udonsharp-core", version = "0.1.0" }
udonsharp-bindings = { path = "../udonsharp-bindings", version = "0.1.0" }
udonsharp-compiler = { path = "../udonsharp-compiler", version = "0.1.0" }
udonsharp-build = { path = "../udonsharp-build", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[features]
default = []