[package]
name = "udonsharp-build"
version = "0.1.0"
edition = "2021"
description = "Build script integration for UdonSharp projects"
license = "MIT OR Apache-2.0"

[dependencies]
udonsharp-core = { path = "../udonsharp-core" }
udonsharp-bindings = { path = "../udonsharp-bindings" }
udonsharp-compiler = { path = "../udonsharp-compiler" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[features]
default = []