[package]
name = "udonsharp-build"
version = "0.1.0"
edition = "2021"
description = "Build script integration for UdonSharp projects"
license = "MIT OR Apache-2.0"
exclude = ["templates/**/target/**"]

[dependencies]
udonsharp-core = { path = "../udonsharp-core", version = "0.1.0" }
udonsharp-bindings = { path = "../udonsharp-bindings", version = "0.1.0" }
udonsharp-compiler = { path = "../udonsharp-compiler", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[features]
default = []