[package]
name = "udonsharp-compiler"
version = "0.1.0"
edition = "2021"
description = "Rust to WASM to UdonSharp compilation pipeline"
license = "MIT OR Apache-2.0"

[dependencies]
udonsharp-core = { path = "../udonsharp-core", version = "0.1.0" }
udonsharp-bindings = { path = "../udonsharp-bindings", version = "0.1.0" }
wasm2usharp-enhanced = { path = "../wasm2usharp-enhanced", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
regex = "1.10"

[features]
default = []
optimization = []