[package]
name = "udonsharp-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for UdonSharp Rust integration"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
anyhow = { workspace = true }