[package]
name = "multi-behavior-demo"
version = "0.1.0"
edition = "2021"
description = "Comprehensive example demonstrating multi-behavior UdonSharp compilation"

[dependencies]
udonsharp-core = { path = "../../crates/udonsharp-core" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "build"
path = "build.rs"