[package]
name = "player-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
udonsharp-core = { path = "../../crates/udonsharp-core" }
udonsharp-macros = { path = "../../crates/udonsharp-macros" }
udonsharp-bindings = { path = "../../crates/udonsharp-bindings" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "udonsharp-build"
path = "build.rs"